--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+  width: 100%;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
