--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
-.container {
+body {
   width: 100%;
-  display: flex;
   padding: 0;
   margin: 0;
+  background-color: #212529;
+  font-family: 'Poppins';
 }
