--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,22 @@
-<div class="container">
-
-  <div class="main">
-
+<div class="main">
+  <div class="box">
+    <div class="box-one">
+      <div class="intro-one">Hi, I'm </div>
+      <div class="intro-two">Beatriz Oliveira</div>
+    </div>
+    <div class="title-one">Front-End Developer</div>
+    <div class="description-one">I design and code beautifully simple things and I love what I do!</div>
+  </div>
+  <div class="box-two">
+    <img class="avatar" src="../../../assets/avatar.svg"
+      alt="Bia's cartoon representation. White girl, with green eyes and blond curly hair wearing a high neck pink sweater">
+  </div>
+  <div class="box-three">
+    <div class="description-two">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Lorem ipsum dolor sit amet, , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.
+    </div>
   </div>
 </div>
