--- a/src/app/features/footer/footer.component.css
+++ b/src/app/features/footer/footer.component.css
@@ -12,38 +12,19 @@
 .footer-box {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-}
-
-.personal-info {
-  padding-top: 10px;
-  padding-left: 5%;
-}
-
-.name {
-  font-size: 20px;
-  padding-bottom: 10px;
-  color: #F3D4CF;
-  font-weight: 700, bold;
-}
-
-.description {
-  font-size: 13px;
-  font-weight: 600;
+  justify-content: center;
 }
 
 .social-media {
-  width: 15%;
-  padding-right: 5%;
+  width: 30%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 
 .social-media-title {
   display: flex;
-  justify-content: center;
-  padding-bottom: 10px;
+  align-items: center;
   font-size: 18px;
   font-weight: 700, bold;
   color: #F5FBF2;
@@ -66,4 +47,11 @@
   font-weight: 600;
 } .footer-itens:hover {
   color: #FFFFFF;
+  transform: scale(1.3);
+}
+
+@media (max-width: 540px) {
+  .social-media-title {
+    display: none;
+  }
 }
