--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -1,15 +1,11 @@
 <div class="footer">
   <div class="footer-box">
-    <div class="personal-info">
-      <div class="name">Beatriz Oliveira.</div>
-      <div class="description">Front-end Developer</div>
-    </div>
     <div class="social-media">
-      <div class="social-media-title"> Social Media</div>
-        <div class="itens">
-          <a class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank">Instagram</a>
-          <a class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank">LinkedIn</a>
-          <a class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank">Github</a>
+      <div class="itens">
+          <div class="social-media-title">Social Media:</div>
+          <button class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank"><img src="../../../assets/icons8-instagram.svg" alt=""></button>
+          <button class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank"><img src="../../../assets/icons8-linkedin.svg" alt=""></button>
+          <button class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank"><img src="../../../assets/icons8-github.svg" alt=""></button>
         </div>
     </div>
   </div>
