fix: error redirecting pages

--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -3,9 +3,9 @@
     <div class="social-media">
       <div class="itens">
           <div class="social-media-title">Social Media:</div>
-          <button class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank"><img src="../../../assets/icons8-instagram.svg" alt=""></button>
-          <button class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank"><img src="../../../assets/icons8-linkedin.svg" alt=""></button>
-          <button class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank"><img src="../../../assets/icons8-github.svg" alt=""></button>
+          <a class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank"><img src="../../../assets/icons8-instagram.svg" alt=""></a>
+          <a class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank"><img src="../../../assets/icons8-linkedin.svg" alt=""></a>
+          <a class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank"><img src="../../../assets/icons8-github.svg" alt=""></a>
         </div>
     </div>
   </div>
