--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -1,12 +1,13 @@
 <div class="footer">
   <div class="footer-box">
-    <div class="social-media">
-      <div class="itens">
-          <div class="social-media-title">Social Media:</div>
-          <a class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank"><img src="../../../assets/icons8-instagram.svg" alt=""></a>
-          <a class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank"><img src="../../../assets/icons8-linkedin.svg" alt=""></a>
-          <a class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank"><img src="../../../assets/icons8-github.svg" alt=""></a>
-        </div>
+    <div class="itens">
+      <div class="social-media-title">Social Media:</div>
+      <a class="footer-itens" href="https://www.instagram.com/beatriz_ods/" target="_blank"><img
+          src="../../../assets/icons8-instagram.svg" alt=""></a>
+      <a class="footer-itens" href="https://www.linkedin.com/in/beatriz-santos-222a63160/" target="_blank"><img
+          src="../../../assets/icons8-linkedin.svg" alt=""></a>
+      <a class="footer-itens" href="https://github.com/BeatrizOSantos" target="_blank"><img
+          src="../../../assets/icons8-github.svg" alt=""></a>
     </div>
   </div>
 </div>
