feat: about me page

--- a/src/app/features/about-me/about-me.component.html
+++ b/src/app/features/about-me/about-me.component.html
@@ -1,3 +1,26 @@
-<p>
-  about-me works!
-</p>
+<body>
+  <div class="main">
+
+    <div class="box-one">
+      <img class="about-me-image" src="../../../assets/about-me.svg" alt="">
+    </div>
+
+    <div class="box-two">
+      <div class="title-one">
+        WHO I AM
+      </div>
+      <div class="title-two">
+        About Me
+      </div>
+      <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt
+        ut labore et dolore magna aliqua. Ut venenatis tellus in metus vulputate eu scelerisque. Quisque id diam vel
+        quam elementum. Faucibus in ornare quam viverra. Aliquam eleifend mi in nulla posuere. Dui vivamus arcu felis
+        bibendum. In iaculis nunc sed augue lacus viverra vitae congue. Dignissim suspendisse in est ante in nibh
+        mauris
+        cursus.
+      </div>
+    </div>
+
+  </div>
+</body>
