--- a/src/app/features/about-me/about-me.component.css
+++ b/src/app/features/about-me/about-me.component.css
@@ -9,11 +9,11 @@
 
 .box-one {
   width: 40%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   padding-left: 4%;
+  padding-top: 25px;
 }
 
 .about-me-image {
@@ -60,4 +60,17 @@
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 30px;
+}
+
+@media (max-width: 540px) {
+  .main {
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-y: scroll;
+  }
+  .box-one {
+    width: 80%;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
 }
